y.output
   0  $accept : prog $end

   1  $$1 :

   2  prog : $$1 dList mainF

   3  $$2 :

   4  $$3 :

   5  mainF : VOID MAIN '(' ')' $$2 '{' lcmd $$3 '}'

   6  dList : decl dList
   7        |

   8  decl : type ID ';'

   9  type : INT
  10       | FLOAT
  11       | BOOL

  12  lcmd : lcmd cmd
  13       |

  14  cmd : '{' lcmd '}'
  15      | exp ';'
  16      | WRITE '(' LIT ')' ';'

  17  $$4 :

  18  cmd : WRITE '(' LIT $$4 ',' exp ')' ';'
  19      | READ '(' ID ')' ';'

  20  $$5 :

  21  $$6 :

  22  cmd : WHILE $$5 '(' exp ')' $$6 cmd

  23  $$7 :

  24  cmd : IF '(' exp $$7 ')' cmd restoIf

  25  $$8 :

  26  $$9 :

  27  cmd : DO $$8 cmd WHILE '(' exp ')' ';' $$9

  28  $$10 :

  29  restoIf : ELSE $$10 cmd
  30          |

  31  exp : NUM
  32      | TRUE
  33      | FALSE
  34      | ID
  35      | '(' exp ')'
  36      | '!' exp
  37      | exp '+' exp
  38      | exp '-' exp
  39      | exp '*' exp
  40      | exp '/' exp
  41      | exp '%' exp
  42      | exp '>' exp
  43      | exp '<' exp
  44      | exp EQ exp
  45      | exp LEQ exp
  46      | exp GEQ exp
  47      | exp NEQ exp
  48      | exp OR exp
  49      | exp AND exp
  50      | ID '=' exp
  51      | ID INC
  52      | INC ID
  53      | ID PLUSE exp

state 0
	$accept : . prog $end  (0)
	$$1 : .  (1)

	.  reduce 1

	prog  goto 1
	$$1  goto 2


state 1
	$accept : prog . $end  (0)

	$end  accept


state 2
	prog : $$1 . dList mainF  (2)
	dList : .  (7)

	INT  shift 3
	FLOAT  shift 4
	BOOL  shift 5
	VOID  reduce 7

	type  goto 6
	dList  goto 7
	decl  goto 8


state 3
	type : INT .  (9)

	.  reduce 9


state 4
	type : FLOAT .  (10)

	.  reduce 10


state 5
	type : BOOL .  (11)

	.  reduce 11


state 6
	decl : type . ID ';'  (8)

	ID  shift 9
	.  error


state 7
	prog : $$1 dList . mainF  (2)

	VOID  shift 10
	.  error

	mainF  goto 11


state 8
	dList : decl . dList  (6)
	dList : .  (7)

	INT  shift 3
	FLOAT  shift 4
	BOOL  shift 5
	VOID  reduce 7

	type  goto 6
	dList  goto 12
	decl  goto 8


state 9
	decl : type ID . ';'  (8)

	';'  shift 13
	.  error


state 10
	mainF : VOID . MAIN '(' ')' $$2 '{' lcmd $$3 '}'  (5)

	MAIN  shift 14
	.  error


state 11
	prog : $$1 dList mainF .  (2)

	.  reduce 2


state 12
	dList : decl dList .  (6)

	.  reduce 6


state 13
	decl : type ID ';' .  (8)

	.  reduce 8


state 14
	mainF : VOID MAIN . '(' ')' $$2 '{' lcmd $$3 '}'  (5)

	'('  shift 15
	.  error


state 15
	mainF : VOID MAIN '(' . ')' $$2 '{' lcmd $$3 '}'  (5)

	')'  shift 16
	.  error


state 16
	mainF : VOID MAIN '(' ')' . $$2 '{' lcmd $$3 '}'  (5)
	$$2 : .  (3)

	.  reduce 3

	$$2  goto 17


state 17
	mainF : VOID MAIN '(' ')' $$2 . '{' lcmd $$3 '}'  (5)

	'{'  shift 18
	.  error


state 18
	mainF : VOID MAIN '(' ')' $$2 '{' . lcmd $$3 '}'  (5)
	lcmd : .  (13)

	.  reduce 13

	lcmd  goto 19


state 19
	mainF : VOID MAIN '(' ')' $$2 '{' lcmd . $$3 '}'  (5)
	lcmd : lcmd . cmd  (12)
	$$3 : .  (4)

	ID  shift 20
	NUM  shift 21
	READ  shift 22
	WRITE  shift 23
	IF  shift 24
	INC  shift 25
	WHILE  shift 26
	TRUE  shift 27
	FALSE  shift 28
	DO  shift 29
	'!'  shift 30
	'('  shift 31
	'{'  shift 32
	'}'  reduce 4

	$$3  goto 33
	cmd  goto 34
	exp  goto 35


state 20
	exp : ID .  (34)
	exp : ID . '=' exp  (50)
	exp : ID . INC  (51)
	exp : ID . PLUSE exp  (53)

	INC  shift 36
	PLUSE  shift 37
	'='  shift 38
	EQ  reduce 34
	LEQ  reduce 34
	GEQ  reduce 34
	NEQ  reduce 34
	AND  reduce 34
	OR  reduce 34
	'>'  reduce 34
	'<'  reduce 34
	'+'  reduce 34
	'-'  reduce 34
	'*'  reduce 34
	'/'  reduce 34
	'%'  reduce 34
	')'  reduce 34
	';'  reduce 34


state 21
	exp : NUM .  (31)

	.  reduce 31


state 22
	cmd : READ . '(' ID ')' ';'  (19)

	'('  shift 39
	.  error


state 23
	cmd : WRITE . '(' LIT ')' ';'  (16)
	cmd : WRITE . '(' LIT $$4 ',' exp ')' ';'  (18)

	'('  shift 40
	.  error


state 24
	cmd : IF . '(' exp $$7 ')' cmd restoIf  (24)

	'('  shift 41
	.  error


state 25
	exp : INC . ID  (52)

	ID  shift 42
	.  error


state 26
	cmd : WHILE . $$5 '(' exp ')' $$6 cmd  (22)
	$$5 : .  (20)

	.  reduce 20

	$$5  goto 43


state 27
	exp : TRUE .  (32)

	.  reduce 32


state 28
	exp : FALSE .  (33)

	.  reduce 33


state 29
	cmd : DO . $$8 cmd WHILE '(' exp ')' ';' $$9  (27)
	$$8 : .  (25)

	.  reduce 25

	$$8  goto 44


state 30
	exp : '!' . exp  (36)

	ID  shift 20
	NUM  shift 21
	INC  shift 25
	TRUE  shift 27
	FALSE  shift 28
	'!'  shift 30
	'('  shift 31
	.  error

	exp  goto 45


state 31
	exp : '(' . exp ')'  (35)

	ID  shift 20
	NUM  shift 21
	INC  shift 25
	TRUE  shift 27
	FALSE  shift 28
	'!'  shift 30
	'('  shift 31
	.  error

	exp  goto 46


state 32
	cmd : '{' . lcmd '}'  (14)
	lcmd : .  (13)

	.  reduce 13

	lcmd  goto 47


state 33
	mainF : VOID MAIN '(' ')' $$2 '{' lcmd $$3 . '}'  (5)

	'}'  shift 48
	.  error


state 34
	lcmd : lcmd cmd .  (12)

	.  reduce 12


state 35
	cmd : exp . ';'  (15)
	exp : exp . '+' exp  (37)
	exp : exp . '-' exp  (38)
	exp : exp . '*' exp  (39)
	exp : exp . '/' exp  (40)
	exp : exp . '%' exp  (41)
	exp : exp . '>' exp  (42)
	exp : exp . '<' exp  (43)
	exp : exp . EQ exp  (44)
	exp : exp . LEQ exp  (45)
	exp : exp . GEQ exp  (46)
	exp : exp . NEQ exp  (47)
	exp : exp . OR exp  (48)
	exp : exp . AND exp  (49)

	EQ  shift 49
	LEQ  shift 50
	GEQ  shift 51
	NEQ  shift 52
	AND  shift 53
	OR  shift 54
	'>'  shift 55
	'<'  shift 56
	'+'  shift 57
	'-'  shift 58
	'*'  shift 59
	'/'  shift 60
	'%'  shift 61
	';'  shift 62
	.  error


state 36
	exp : ID INC .  (51)

	.  reduce 51


state 37
	exp : ID PLUSE . exp  (53)

	ID  shift 20
	NUM  shift 21
	INC  shift 25
	TRUE  shift 27
	FALSE  shift 28
	'!'  shift 30
	'('  shift 31
	.  error

	exp  goto 63


state 38
	exp : ID '=' . exp  (50)

	ID  shift 20
	NUM  shift 21
	INC  shift 25
	TRUE  shift 27
	FALSE  shift 28
	'!'  shift 30
	'('  shift 31
	.  error

	exp  goto 64


state 39
	cmd : READ '(' . ID ')' ';'  (19)

	ID  shift 65
	.  error


state 40
	cmd : WRITE '(' . LIT ')' ';'  (16)
	cmd : WRITE '(' . LIT $$4 ',' exp ')' ';'  (18)

	LIT  shift 66
	.  error


state 41
	cmd : IF '(' . exp $$7 ')' cmd restoIf  (24)

	ID  shift 20
	NUM  shift 21
	INC  shift 25
	TRUE  shift 27
	FALSE  shift 28
	'!'  shift 30
	'('  shift 31
	.  error

	exp  goto 67


state 42
	exp : INC ID .  (52)

	.  reduce 52


state 43
	cmd : WHILE $$5 . '(' exp ')' $$6 cmd  (22)

	'('  shift 68
	.  error


state 44
	cmd : DO $$8 . cmd WHILE '(' exp ')' ';' $$9  (27)

	ID  shift 20
	NUM  shift 21
	READ  shift 22
	WRITE  shift 23
	IF  shift 24
	INC  shift 25
	WHILE  shift 26
	TRUE  shift 27
	FALSE  shift 28
	DO  shift 29
	'!'  shift 30
	'('  shift 31
	'{'  shift 32
	.  error

	cmd  goto 69
	exp  goto 35


state 45
	exp : '!' exp .  (36)
	exp : exp . '+' exp  (37)
	exp : exp . '-' exp  (38)
	exp : exp . '*' exp  (39)
	exp : exp . '/' exp  (40)
	exp : exp . '%' exp  (41)
	exp : exp . '>' exp  (42)
	exp : exp . '<' exp  (43)
	exp : exp . EQ exp  (44)
	exp : exp . LEQ exp  (45)
	exp : exp . GEQ exp  (46)
	exp : exp . NEQ exp  (47)
	exp : exp . OR exp  (48)
	exp : exp . AND exp  (49)

	.  reduce 36


state 46
	exp : '(' exp . ')'  (35)
	exp : exp . '+' exp  (37)
	exp : exp . '-' exp  (38)
	exp : exp . '*' exp  (39)
	exp : exp . '/' exp  (40)
	exp : exp . '%' exp  (41)
	exp : exp . '>' exp  (42)
	exp : exp . '<' exp  (43)
	exp : exp . EQ exp  (44)
	exp : exp . LEQ exp  (45)
	exp : exp . GEQ exp  (46)
	exp : exp . NEQ exp  (47)
	exp : exp . OR exp  (48)
	exp : exp . AND exp  (49)

	EQ  shift 49
	LEQ  shift 50
	GEQ  shift 51
	NEQ  shift 52
	AND  shift 53
	OR  shift 54
	'>'  shift 55
	'<'  shift 56
	'+'  shift 57
	'-'  shift 58
	'*'  shift 59
	'/'  shift 60
	'%'  shift 61
	')'  shift 70
	.  error


state 47
	lcmd : lcmd . cmd  (12)
	cmd : '{' lcmd . '}'  (14)

	ID  shift 20
	NUM  shift 21
	READ  shift 22
	WRITE  shift 23
	IF  shift 24
	INC  shift 25
	WHILE  shift 26
	TRUE  shift 27
	FALSE  shift 28
	DO  shift 29
	'!'  shift 30
	'('  shift 31
	'{'  shift 32
	'}'  shift 71
	.  error

	cmd  goto 34
	exp  goto 35


state 48
	mainF : VOID MAIN '(' ')' $$2 '{' lcmd $$3 '}' .  (5)

	.  reduce 5


state 49
	exp : exp EQ . exp  (44)

	ID  shift 20
	NUM  shift 21
	INC  shift 25
	TRUE  shift 27
	FALSE  shift 28
	'!'  shift 30
	'('  shift 31
	.  error

	exp  goto 72


state 50
	exp : exp LEQ . exp  (45)

	ID  shift 20
	NUM  shift 21
	INC  shift 25
	TRUE  shift 27
	FALSE  shift 28
	'!'  shift 30
	'('  shift 31
	.  error

	exp  goto 73


state 51
	exp : exp GEQ . exp  (46)

	ID  shift 20
	NUM  shift 21
	INC  shift 25
	TRUE  shift 27
	FALSE  shift 28
	'!'  shift 30
	'('  shift 31
	.  error

	exp  goto 74


state 52
	exp : exp NEQ . exp  (47)

	ID  shift 20
	NUM  shift 21
	INC  shift 25
	TRUE  shift 27
	FALSE  shift 28
	'!'  shift 30
	'('  shift 31
	.  error

	exp  goto 75


state 53
	exp : exp AND . exp  (49)

	ID  shift 20
	NUM  shift 21
	INC  shift 25
	TRUE  shift 27
	FALSE  shift 28
	'!'  shift 30
	'('  shift 31
	.  error

	exp  goto 76


state 54
	exp : exp OR . exp  (48)

	ID  shift 20
	NUM  shift 21
	INC  shift 25
	TRUE  shift 27
	FALSE  shift 28
	'!'  shift 30
	'('  shift 31
	.  error

	exp  goto 77


state 55
	exp : exp '>' . exp  (42)

	ID  shift 20
	NUM  shift 21
	INC  shift 25
	TRUE  shift 27
	FALSE  shift 28
	'!'  shift 30
	'('  shift 31
	.  error

	exp  goto 78


state 56
	exp : exp '<' . exp  (43)

	ID  shift 20
	NUM  shift 21
	INC  shift 25
	TRUE  shift 27
	FALSE  shift 28
	'!'  shift 30
	'('  shift 31
	.  error

	exp  goto 79


state 57
	exp : exp '+' . exp  (37)

	ID  shift 20
	NUM  shift 21
	INC  shift 25
	TRUE  shift 27
	FALSE  shift 28
	'!'  shift 30
	'('  shift 31
	.  error

	exp  goto 80


state 58
	exp : exp '-' . exp  (38)

	ID  shift 20
	NUM  shift 21
	INC  shift 25
	TRUE  shift 27
	FALSE  shift 28
	'!'  shift 30
	'('  shift 31
	.  error

	exp  goto 81


state 59
	exp : exp '*' . exp  (39)

	ID  shift 20
	NUM  shift 21
	INC  shift 25
	TRUE  shift 27
	FALSE  shift 28
	'!'  shift 30
	'('  shift 31
	.  error

	exp  goto 82


state 60
	exp : exp '/' . exp  (40)

	ID  shift 20
	NUM  shift 21
	INC  shift 25
	TRUE  shift 27
	FALSE  shift 28
	'!'  shift 30
	'('  shift 31
	.  error

	exp  goto 83


state 61
	exp : exp '%' . exp  (41)

	ID  shift 20
	NUM  shift 21
	INC  shift 25
	TRUE  shift 27
	FALSE  shift 28
	'!'  shift 30
	'('  shift 31
	.  error

	exp  goto 84


state 62
	cmd : exp ';' .  (15)

	.  reduce 15


state 63
	exp : exp . '+' exp  (37)
	exp : exp . '-' exp  (38)
	exp : exp . '*' exp  (39)
	exp : exp . '/' exp  (40)
	exp : exp . '%' exp  (41)
	exp : exp . '>' exp  (42)
	exp : exp . '<' exp  (43)
	exp : exp . EQ exp  (44)
	exp : exp . LEQ exp  (45)
	exp : exp . GEQ exp  (46)
	exp : exp . NEQ exp  (47)
	exp : exp . OR exp  (48)
	exp : exp . AND exp  (49)
	exp : ID PLUSE exp .  (53)

	EQ  shift 49
	LEQ  shift 50
	GEQ  shift 51
	NEQ  shift 52
	AND  shift 53
	OR  shift 54
	'>'  shift 55
	'<'  shift 56
	'+'  shift 57
	'-'  shift 58
	'*'  shift 59
	'/'  shift 60
	'%'  shift 61
	')'  reduce 53
	';'  reduce 53


state 64
	exp : exp . '+' exp  (37)
	exp : exp . '-' exp  (38)
	exp : exp . '*' exp  (39)
	exp : exp . '/' exp  (40)
	exp : exp . '%' exp  (41)
	exp : exp . '>' exp  (42)
	exp : exp . '<' exp  (43)
	exp : exp . EQ exp  (44)
	exp : exp . LEQ exp  (45)
	exp : exp . GEQ exp  (46)
	exp : exp . NEQ exp  (47)
	exp : exp . OR exp  (48)
	exp : exp . AND exp  (49)
	exp : ID '=' exp .  (50)

	EQ  shift 49
	LEQ  shift 50
	GEQ  shift 51
	NEQ  shift 52
	AND  shift 53
	OR  shift 54
	'>'  shift 55
	'<'  shift 56
	'+'  shift 57
	'-'  shift 58
	'*'  shift 59
	'/'  shift 60
	'%'  shift 61
	')'  reduce 50
	';'  reduce 50


state 65
	cmd : READ '(' ID . ')' ';'  (19)

	')'  shift 85
	.  error


state 66
	cmd : WRITE '(' LIT . ')' ';'  (16)
	cmd : WRITE '(' LIT . $$4 ',' exp ')' ';'  (18)
	$$4 : .  (17)

	')'  shift 86
	','  reduce 17

	$$4  goto 87

